--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="explo">
             <h1 class="explo__title"> Réservez le menu qui vous convient</h1>
             <p class="explo__content"> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-            <button class="explo__btn" href="#restaurants">Explorer nos restaurants</button>
+            <button class="explo__btn">Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
             <div class="container">
@@ -74,6 +74,7 @@
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-heart"></i>
                                         </div>
+                                    </div>
                                     <div class="new">
                                         <p class="new1">Nouveau</p>
                                     </div>
