--- a/menu-lne.html
+++ b/menu-lne.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </section>
-                <button class="menu__bouton" href="#">Commander</button>
+                <button class="menu__bouton">Commander</button>
         </section>
         </div>
     </main>
